examples/test/testpolicy19489.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19489
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key0: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value22
      podSelector:
        matchLabels:
          key46: value40
          key43: value0
          key19: value28
